--- a/public/Mattia/TT/style.scss
+++ b/public/Mattia/TT/style.scss
@@ -262,7 +262,7 @@ $darker_contrast: rgb(152, 152, 152);
 	transform: translate(-50%, -50%);
 	box-shadow: 0px 5px 15px 3px rgba(0, 0, 0, 0.21);
 
-	z-index: 4;
+	z-index: 6;
 
 	.close-button {
 		@include close-button;
@@ -270,45 +270,50 @@ $darker_contrast: rgb(152, 152, 152);
 }
 
 .tt-edit-user-preferences {
-	&.hidden {
-		display: none;
-	}
+	display: grid;
 
-	&.visible {
-		display: grid;
-	}
 
 	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 5;
-
-	grid-template-columns: 1fr 8fr;
-
+	;
 	background: $table_background;
 	box-shadow: 0px 5px 15px 3px rgba(0, 0, 0, 0.21);
-	width: 40vw;
-	height: 60vh;
+	width: min(750px, 100vw);
+	max-height: 60vh;
 
 	.close-button {
 		@include close-button;
 	}
 
 	.menu-bar {
-		height: 100%;
+		height: 60vh;
 		grid-column: 1/2;
-
+		overflow-y: auto;
 		background: $one_darker_background;
 	}
 
+
 	.page-section {
-		height: 100%;
+		height: 60vh;
 		grid-column: 2 /3;
 
 		.page {
 			@include viewSys;
+			overflow-y: auto;
+			height: 90%;
 		}
+
+		.save-slide {
+			height: min(10%, 35px);
+		}
+	}
+
+	h7 {
+		color: grey;
+		font-size: 1rem;
 	}
 }
 
